--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 	<link rel="stylesheet" type="text/css" href="colorgame.css">
 </head>
 <body>
-	<h6>  </h6>
 
-	<h1>The Great
+	<h1><br>The Great
 	  <br>
 	  <span id="colorDisplay">RGB</span> 
       <br>
